--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	],
 
 	"require": {
-		"phpunit/phpunit": "3.7.*"
+		"phpunit/phpunit": "3.7.*",
+		"purekid/mongodm": "1.4.0"
 	},
 	"autoload": {
 		"psr-0": {
