--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "bperel/geotime",
 	"description": "Kingdoms though time.",
-	"minimum-stability": "dev",
+	"minimum-stability": "stable",
 	"license": "cc-by-sa",
 	"authors": [
 		{
@@ -12,7 +12,7 @@
 
 	"require": {
 		"phpunit/phpunit": "3.7.*",
-		"purekid/mongodm": "1.4.0",
+		"purekid/mongodm": "1.4.2",
 		"psr/log": "1.0.0",
 		"apache/log4php": "2.3.0"
 	},
