Save the user's selected territory (WIP)

--- a/.htaccess
+++ b/.htaccess
@@ -542,3 +542,8 @@ FileETag None
 # <IfModule mod_headers.c>
 #    Header set Connection Keep-Alive
 # </IfModule>
+
+php_value max_input_vars 6000
+php_value suhosin.get.max_vars 6000
+php_value suhosin.post.max_vars 6000
+php_value suhosin.request.max_vars 6000
