--- a/bower.json
+++ b/bower.json
@@ -27,11 +27,6 @@
     },
     "devDependencies": {
         "requirejs": "~2.1.15",
-        "karma": "~0.3.0",
-        "karma-jasmine": "~0.3.2",
-        "socket.io-client-fixed": "~1.2.1",
-        "jasmine": "~2.1.2",
-        "jasmine-matchers": "~0.2.2",
-        "jasmine-jquery": "~2.0.5"
+        "socket.io-client-fixed": "~1.2.1"
     }
 }
