--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "geotime",
   "description": "Kingdoms though time.",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/bperel/geotime.git"
+    "type": "git",
+    "url": "https://github.com/bperel/geotime.git"
   },
   "contributors": [
     {
@@ -21,6 +21,7 @@
     "karma-coverage": "~0.3.1",
     "karma-jasmine": "~0.3.5",
     "karma-jasmine-jquery": "~0.1.1",
+    "karma-junit-reporter": "~0.2.2",
     "karma-phantomjs-launcher": "~0.2.0",
     "phantomjs": "~1.9.17"
   }
