--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 	},
 	"autoload": {
 		"psr-0": {
-		  	"geotime\\models\\mariadb": "lib/geotime/new_models/",
+            "geotime\\models\\mariadb": "lib/geotime/",
+            "geotime\\models\\mariadb\\types": "lib/geotime/types/",
 		  	"geotime\\helpers": "lib/geotime/new_models_helpers/"
 		}
 	},
