--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
 	},
 	"autoload": {
 		"psr-4": {
-            "geotime\\models\\mariadb\\": "lib/geotime/",
+            "geotime\\models\\mariadb\\": "lib/geotime/models/",
             "geotime\\models\\mariadb\\types\\": "lib/geotime/types/",
 		  	"geotime\\Test\\Helper\\": "test/phpunit/",
-		  	"geotime\\helpers\\": "lib/geotime/new_models_helpers/",
+		  	"geotime\\helpers\\": "lib/geotime/helpers/",
 		  	"geotime\\": "lib/geotime/"
 		}
 	},
