Fix getMapsAndLocalizedTerritoriesCount query Fix Map<->Territory mapping

--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "Admin area"
-AuthUserFile /home/geotime/admin_auth.txt
+AuthUserFile /home/bruno/passwords
 Require user admin
