--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "jasmine-core": "~2.3.4",
+    "jasmine-jquery": "~2.1.0",
     "karma": "~0.12.35",
     "karma-coverage": "~0.3.1",
     "karma-jasmine": "~0.3.5",
