--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "lightgallery": "~1.1.4",
     "modernizr": "~2.6.2",
     "topojson": "~1.5.1",
-    "requirejs": "~2.1.15"
+    "requirejs": "~2.1.15",
+    "angular": "~1.4.9",
+    "angular-route": "~1.4.x"
   },
   "devDependencies": {
     "socket.io-client-fixed": "~1.2.1",
