--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "topojson": "~1.5.1",
     "requirejs": "~2.1.15",
     "angular": "~1.4.9",
-    "angular-ui-router": "~0.2.x"
+    "angular-ui-router": "~0.2.x",
+    "angucomplete-alt": "~2.2.0"
   },
   "devDependencies": {
     "socket.io-client-fixed": "~1.2.1",
